# Agent_Smith

./: .env.example  .gitignore  BENCHMARK_REPORT.md  COMMANDS.md  Full tasks MBPP  Full tasks SWE  Makefile  README.md  __main__.py  agent_mbpp.py  agent_swebench.py  changes.md  commands.md  error.txt  live_coding.md  mcp_tools_mbpp.py  mcp_tools_swebench.py  models.md  pyproject.toml  rotture.md  rotture_en.md  run_benchmark.sh  run_benchmark_commands.sh  tofix  tst
agent/cli/: agent_mbpp.py  agent_swebench.py
agent/core/: agent_loop.py
agent/llm/: manager.py  providers.py
agent/metrics/: tracker.py
agent/parsing/: code_extractor.py
agent/prompts/: mbpp_prompt.txt  swebench_prompt.txt
config/: models.yaml  sandbox_template.json
eval/: report_builder.py  runner.py
eval_documents/: exam_anticheat.sh  exam_mbpp.sh  exam_sandbox.sh  exam_scripts_instructions.md  exam_swebench.sh
eval_documents/sandbox_tests/: sandbox_config.json  sandbox_config_resources.json  sandbox_config_swebench.json  simple_mcp_server.py  test_builtins_blocked.py  test_dynamic_discovery.py  test_file_access.py  test_imports_allowed.py  test_memory.py  (+11 more)
mcp_servers/: mcp_client.py  mcp_server.py  mcp_tools_mbpp.py  mcp_tools_swebench.py
models/: agent_state.py  llm.py  mbpp.py  sandbox.py  sandbox_model.py  solution.py  swebench.py  task.py
moulinette/: pyproject.toml
mydocker/: manager.py
sandbox/: cli.py
scripts/: bench_all.sh  bench_extra_swe.sh  bench_mbpp.sh  bench_swebench.sh
tests/: test_agent.py  test_eval.py  test_sandbox.py  test_sandbox_scripts.py  test_tools.py
utils/: env.py  logger.py
(+5524 files in other folders)
