[project]
name = "agent-smith"
version = "1.0.0"
description = "Autonomous coding agent for MBPP and SWE-bench"
requires-python = ">=3.10"

dependencies = [
    "pydantic>=2.0",
    "requests>=2.31",
    "python-dotenv>=1.0",
    "docker>=7.0",
    "mcp>=1.0",
    "PyYAML>=6.0",
]

[project.scripts]
# These map `uv run <name>` to the correct module
sandbox      = "sandbox.cli:main"
agent-mbpp   = "agent.cli.agent_mbpp:main"
agent-swebench = "agent.cli.agent_swebench:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agent", "sandbox", "models", "docker", "utils", "tools", "mcp_servers", "eval"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]